Change button size

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </p>
         <div class="col text-center my-4">
           <a
-            class="btn btn-primary btn-floating"
+            class="btn btn-primary cta-button"
             href="https://github.com/torastrengel"
             target="_blank"
             >Check out my GitHub profile!</a
