Implement tags and fix footer copyright

--- a/index.html
+++ b/index.html
@@ -44,28 +44,40 @@
             don't have commercial experience yet I have accumulated a lot of
             experience through hobby projects and different coding courses.
           </p>
-          <section>
-            <h5>Technologies I'm most comfortable with</h5>
-            <ul>
-              <li>React.js</li>
-              <li>JavaScript</li>
-              <li>Node.js</li>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>SASS</li>
-            </ul>
-          </section>
-          <section>
-            <h5>I also have some experience with these:</h5>
-            <ul>
-              <li>Docker</li>
-              <li>Heroku</li>
-              <li>MongoDB</li>
-              <li>Bootstrap</li>
-              <li>Redux</li>
-              <li>GraphQL</li>
-            </ul>
-          </section>
+          <div class="container">
+            <div class="row my-5">
+              <div class="col-md-6 my-4">
+                <div class="card p-4 skill-card" style="width: 100%">
+                  <div class="text-center">
+                    <h5>Technologies I'm most comfortable with</h5>
+                  </div>
+                  <div class="card-body text-center">
+                    <span class="skill-tag">React.js</span>
+                    <span class="skill-tag">JavaScript</span>
+                    <span class="skill-tag">Node.js</span>
+                    <span class="skill-tag">HTML</span>
+                    <span class="skill-tag">CSS</span>
+                    <span class="skill-tag">SASS</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 my-4">
+                <div class="card p-4 skill-card" style="width: 100%">
+                  <div class="text-center">
+                    <h5>I also have some experience with these:</h5>
+                  </div>
+                  <div class="card-body text-center">
+                    <span class="skill-tag">Docker</span>
+                    <span class="skill-tag">Heroku</span>
+                    <span class="skill-tag">MongoDB</span>
+                    <span class="skill-tag">Bootstrap</span>
+                    <span class="skill-tag">Redux</span>
+                    <span class="skill-tag">GraphQL</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <p>
             I show all the potential necessary to forge a successful career in
             web development. I have taken initiative, am self-driven, and have a
@@ -88,12 +100,13 @@
             class="btn btn-primary cta-button"
             href="https://github.com/torastrengel"
             target="_blank"
-            >Check out my GitHub profile!</a
-          >
+            ><i class="fa fa-github" aria-hidden="true"></i> Check out my GitHub
+            profile!
+          </a>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-lg-4 p-4">
+        <div class="col-md-6 col-lg-4 my-4">
           <div class="card text-bg-dark" style="width: 100%">
             <div class="card-header">Tampere busmarkers</div>
             <img
@@ -117,7 +130,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4 p-4">
+        <div class="col-md-6 col-lg-4 my-4">
           <div class="card text-bg-dark" style="width: 100%">
             <div class="card-header">E-commerce store</div>
             <img
@@ -141,7 +154,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4 p-4">
+        <div class="col-md-6 col-lg-4 my-4">
           <div class="card text-bg-dark" style="width: 100%">
             <div class="card-header">The Google Keep Clone</div>
             <img
@@ -165,7 +178,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4 p-4">
+        <div class="col-md-6 col-lg-4 my-4">
           <div class="card text-bg-dark" style="width: 100%">
             <div class="card-header">JavaScript Calculator</div>
             <img
@@ -207,7 +220,7 @@
             ><i class="fa fa-linkedin" aria-hidden="true"></i>
           </a>
         </section>
-        <div class="text-center p-3">&copy; 2022 Copyright: heikki.codes</div>
+        <div class="text-center p-3">&copy; 2022 Copyright: Heikki Riihinen</div>
       </div>
     </footer>
     <script
