Fix texts and image positioning

--- a/index.html
+++ b/index.html
@@ -35,14 +35,15 @@
         <div class="col-md-12 col-lg-7 px-5">
           <h1 class="hero-title">
             Resume For Heikki, An Aspiring Web Developer That Wants To Land A
-            Job
+            Job 🚀
           </h1>
           <p>
-            Hi there! My name is Heikki and I am an aspiring
-            <strong>web developer</strong> who wants to land a job in the
-            industry. I have studied coding for a long time and even though I
-            don't have commercial experience yet I have accumulated a lot of
-            experience through hobby projects and different coding courses.
+            Hi there! My name is Heikki and I am a motivated and passionate
+            <strong>web developer</strong> who wants to land their first job in the
+            industry. I have studied coding independently for 1-2 years, and have thus accumulated a great amount of
+            experience of using different technologies and frameworks through hobby projects and different coding courses. 
+            <br>
+            <strong>So, let's get to know me a little better!</strong>
           </p>
           <div class="container">
             <div class="row my-5">
@@ -79,19 +80,25 @@
             </div>
           </div>
           <p>
-            I show all the potential necessary to forge a successful career in
-            web development. I have taken initiative, am self-driven, and have a
-            passion for coding. All of these qualities will bode well for me as
-            I continue on this journey.
+            <h5>Why me?</h5>
+            As I am completely self-taught, you can be 100% certain that I'm full of intrinsic motivation toward advancing my skills and utilizing them to create something awesome! 🔥
+          </p>
+          <p>
+            I'm constantly working on creating something new, whether it's little bots for making things easier (or let's be honest, cooler) or coding an entire e-commerce store. When I'm not my hands deep in a bigger project, I'm gaining more skills with online courses. 
+          </p> 
+          <p>
+            I also know when and where to look for help when I'm facing problems that I can't solve with my current skilltree - and I take these experiences as opportunities to learn something new. 😊 
+          </p>
+          <p>
+            If you're not fully convinced yet, <strong>take a look below to see some of the projects I've done so far! ⬇️</strong> 
           </p>
         </div>
       </div>
       <div class="container-fluid whitespace">
-        <h2 class="text-center mb-4">Projects I've worked on so far</h2>
+        <h2 class="text-center mb-4">Personal projects</h2>
         <p>
-          Below are some of the projects I've worked thus far. These are not all
-          of them, since some of my projects include Node.js projects that
-          either run on my computer or in the cloud. If you are interested to
+          Below are some of the projects I've created thus far! This list is not exhaustive, as some of my projects include Node.js projects that
+          either run on my computer or in the cloud. To
           see everything I've worked on, make sure to check out my GitHub from
           the link below!
         </p>
@@ -114,12 +121,15 @@
               class="card-img-top"
               alt="Screenshot from my Tampere busmarkers project. Image shows a map of Tampere and filtering options on the left"
             />
-            <div class="card-body text-center">
+            <div class="card-body text-center p-5">
               <h5 class="card-title">Tampere busmarkers</h5>
               <p class="card-text">
-                React pratice using React leaflet and API calling to show where
-                Tampere's public transportation is going and how fast they are
-                moving. This was my first project using map data.
+                An app that shows where the vehicles of
+                Tampere's public transportation are currently located and how fast they are
+                moving, with a feature to filter the data based on the line number. 
+              </p>
+              <p class="card-text">
+                Fully independent project that also serves as a React practice using React leaflet and an API. This was my first project using map data.
               </p>
               <a
                 href="https://melodic-blancmange-9e7772.netlify.app/"
@@ -138,12 +148,12 @@
               class="card-img-top"
               alt="A screenshot of CRWN Clothing e-commerce store project"
             />
-            <div class="card-body text-center">
+            <div class="card-body text-center p-5">
               <h5 class="card-title">CRWN Clothing e-commerce store</h5>
               <p class="card-text">
-                This project is part of ZTM's Become a Senior React Developer in
-                2022 course. The goal is to build an online store utilizing
-                Google Firebase, GraphQL, Routes, Redux and Stripe payments.
+                The final course project of <i>ZTM's Become a Senior React Developer in
+                  2022</i>, an e-commerce store utilizing
+                Google Firebase, GraphQL, Routes, Redux and Stripe payments. <strong>In development</strong>.
               </p>
               <a
                 href="https://shiny-bubblegum-36d94a.netlify.app"
@@ -162,11 +172,11 @@
               class="card-img-top"
               alt="A screenshot of The Google Keep clone project"
             />
-            <div class="card-body text-center">
-              <h5 class="card-title">Keep Clone</h5>
+            <div class="card-body text-center p-5">
+              <h5 class="card-title">Google Keep Clone</h5>
               <p class="card-text">
-                Part of Scrimba's JavaScript course where we built a Google Keep
-                clone which saves notes and saves them in localStorage. Practice
+                Part of Scrimba's JavaScript course where we built a working Google Keep
+                clone. Features include saving notes and automatically storing them in the browser's localStorage for further use. Practice
                 for JS logic and using localStorage.
               </p>
               <a
@@ -186,11 +196,10 @@
               class="card-img-top"
               alt="Logo with a simple calculator and below it reads JavaScript calculator"
             />
-            <div class="card-body text-center">
+            <div class="card-body text-center p-5">
               <h5 class="card-title">JavaScript calculator</h5>
               <p class="card-text">
-                Basic calculator capable of basic calculations. This was a
-                project where I wanted to practice JS logic, positioning of HTML
+                A JavaScript calculator capable of basic mathematical operations. This was an independent practice project where I wanted to develop my skills of using JS logic, positioning of HTML
                 elements and making them look like an actual calculator.
               </p>
               <a
