Fix text and add subheading

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         </div>
         <div class="col-md-12 col-lg-7 px-5">
           <h1 class="hero-title">
-            Resume For Heikki, An Aspiring Web Developer That Wants To Land A
-            Job 🚀
+            Personal portfolio of Heikki
           </h1>
+          <h4 class="text-center py-2 mb-4 subheading"><em>An Aspiring Web Developer That Wants To Land A Job 🚀</em></h4>
           <p>
             Hi there! My name is Heikki and I am a motivated and passionate
             <strong>web developer</strong> who wants to land their first job in the
