Fix some small writing errors

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             Hi there! My name is Heikki and I am a motivated and passionate
             <strong>web developer</strong> who wants to land their first job in the
             industry. I have studied coding independently for 1-2 years, and have thus accumulated a great amount of
-            experience of using different technologies and frameworks through hobby projects and different coding courses. 
+            experience in using different technologies and frameworks through hobby projects and different coding courses. 
             <br>
             <strong>So, let's get to know me a little better!</strong>
           </p>
@@ -87,7 +87,7 @@
             I'm constantly working on creating something new, whether it's little bots for making things easier (or let's be honest, cooler) or coding an entire e-commerce store. When I'm not my hands deep in a bigger project, I'm gaining more skills with online courses. 
           </p> 
           <p>
-            I also know when and where to look for help when I'm facing problems that I can't solve with my current skilltree - and I take these experiences as opportunities to learn something new. 😊 
+            I also know when and where to look for help when I'm facing problems that I can't solve with my current skill tree - and I take these experiences as opportunities to learn something new. 😊 
           </p>
           <p>
             If you're not fully convinced yet, <strong>take a look below to see some of the projects I've done so far! ⬇️</strong> 
@@ -129,7 +129,7 @@
                 moving, with a feature to filter the data based on the line number. 
               </p>
               <p class="card-text">
-                Fully independent project that also serves as a React practice using React leaflet and an API. This was my first project using map data.
+                A fully independent project that also serves as a React practice using React leaflet and an API. This was my first project using map data.
               </p>
               <a
                 href="https://melodic-blancmange-9e7772.netlify.app/"
@@ -153,7 +153,7 @@
               <p class="card-text">
                 The final course project of <i>ZTM's Become a Senior React Developer in
                   2022</i>, an e-commerce store utilizing
-                Google Firebase, GraphQL, Routes, Redux and Stripe payments. <strong>In development</strong>.
+                Google Firebase, GraphQL, Routes, Redux, and Stripe payments. <strong>In development</strong>.
               </p>
               <a
                 href="https://shiny-bubblegum-36d94a.netlify.app"
@@ -199,8 +199,7 @@
             <div class="card-body text-center p-5">
               <h5 class="card-title">JavaScript calculator</h5>
               <p class="card-text">
-                A JavaScript calculator capable of basic mathematical operations. This was an independent practice project where I wanted to develop my skills of using JS logic, positioning of HTML
-                elements and making them look like an actual calculator.
+                A JavaScript calculator that is capable of basic mathematical operations. This was an independent practice project where I wanted to develop my skills in using JS logic, positioning HTML elements, and making them look like an actual calculator.
               </p>
               <a
                 href="https://codepen.io/Torastrengel/pen/MWQgMMo"
