Separate course projects from personal projects.

--- a/index.html
+++ b/index.html
@@ -142,30 +142,6 @@
         </div>
         <div class="col-md-6 col-lg-4 my-4">
           <div class="card text-bg-dark" style="width: 100%">
-            <div class="card-header">E-commerce store</div>
-            <img
-              src="./assets/img/crwn-clothing.jpg"
-              class="card-img-top"
-              alt="A screenshot of CRWN Clothing e-commerce store project"
-            />
-            <div class="card-body text-center p-5">
-              <h5 class="card-title">CRWN Clothing e-commerce store</h5>
-              <p class="card-text">
-                The final course project of <i>ZTM's Become a Senior React Developer in
-                  2022</i>, an e-commerce store utilizing
-                Google Firebase, GraphQL, Routes, Redux, and Stripe payments. <strong>In development</strong>.
-              </p>
-              <a
-                href="https://shiny-bubblegum-36d94a.netlify.app"
-                class="btn btn-primary"
-                target="_blank"
-                >Go check it out!</a
-              >
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4 my-4">
-          <div class="card text-bg-dark" style="width: 100%">
             <div class="card-header">The Google Keep Clone</div>
             <img
               src="./assets/img/keepclone.jpg"
@@ -206,6 +182,38 @@
                 class="btn btn-primary"
                 target="_blank"
                 >Try it on Codepen!</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid whitespace">
+        <h2 class="text-center mb-4">Course projects</h2>
+        <p>
+          The projects below are built as a part of coding courses, so they are not my original projects. These are crucial in learning new skills and technologies which I then can implement in my projects. Check them out below!
+        </p>
+      </div>
+      <div class="row">
+        <div class="col-md-6 col-lg-4 my-4">
+          <div class="card text-bg-dark" style="width: 100%">
+            <div class="card-header">E-commerce store</div>
+            <img
+              src="./assets/img/crwn-clothing.jpg"
+              class="card-img-top"
+              alt="A screenshot of CRWN Clothing e-commerce store project"
+            />
+            <div class="card-body text-center p-5">
+              <h5 class="card-title">CRWN Clothing e-commerce store</h5>
+              <p class="card-text">
+                The final course project of <i>ZTM's Become a Senior React Developer in
+                  2022</i>, an e-commerce store utilizing
+                Google Firebase, GraphQL, Routes, Redux, and Stripe payments. <strong>In development</strong>.
+              </p>
+              <a
+                href="https://shiny-bubblegum-36d94a.netlify.app"
+                class="btn btn-primary"
+                target="_blank"
+                >Go check it out!</a
               >
             </div>
           </div>
