Add missing noreferrer to links for security

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
           <a
             class="btn btn-primary cta-button"
             href="https://github.com/torastrengel"
+            rel="noreferrer"
             target="_blank"
             ><i class="fa fa-github" aria-hidden="true"></i> Check out my GitHub
             profile!
@@ -135,6 +136,7 @@
                 href="https://melodic-blancmange-9e7772.netlify.app/"
                 class="btn btn-primary"
                 target="_blank"
+                rel="noreferrer"
                 >Take a look at it!</a
               >
             </div>
@@ -159,6 +161,7 @@
                 href="https://reliable-cendol-a33baf.netlify.app/"
                 class="btn btn-primary"
                 target="_blank"
+                rel="noreferrer"
                 >Take a look and leave a note!</a
               >
             </div>
@@ -181,6 +184,7 @@
                 href="https://codepen.io/Torastrengel/pen/MWQgMMo"
                 class="btn btn-primary"
                 target="_blank"
+                rel="noreferrer"
                 >Try it on Codepen!</a
               >
             </div>
@@ -213,6 +217,7 @@
                 href="https://shiny-bubblegum-36d94a.netlify.app"
                 class="btn btn-primary"
                 target="_blank"
+                rel="noreferrer"
                 >Go check it out!</a
               >
             </div>
@@ -227,12 +232,14 @@
             href="https://github.com/torastrengel"
             target="_blank"
             class="btn btn-outline-light btn-floating m-1"
+            rel="noreferrer"
             ><i class="fa fa-github" aria-hidden="true"></i>
           </a>
           <a
             href="https://www.linkedin.com/in/heikki-riihinen/"
             class="btn btn-outline-light btn-floating m-1"
             target="_blank"
+            rel="noreferrer"
             ><i class="fa fa-linkedin" aria-hidden="true"></i>
           </a>
         </section>
