--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="col text-center my-4">
           <a
             class="btn btn-primary cta-button"
-            href="https://github.com/torastrengel"
+            href="https://github.com/heikkikoodaa"
             rel="noreferrer"
             target="_blank"
             ><i class="fa fa-github" aria-hidden="true"></i> Check out my GitHub
@@ -181,7 +181,7 @@
                 A JavaScript calculator that is capable of basic mathematical operations. This was an independent practice project where I wanted to develop my skills in using JS logic, positioning HTML elements, and making them look like an actual calculator.
               </p>
               <a
-                href="https://codepen.io/Torastrengel/pen/MWQgMMo"
+                href="https://codepen.io/heikkikoodaa/pen/MWQgMMo"
                 class="btn btn-primary"
                 target="_blank"
                 rel="noreferrer"
@@ -229,7 +229,7 @@
       <div class="container p-4">
         <section class="mb-2">
           <a
-            href="https://github.com/torastrengel"
+            href="https://github.com/heikkikoodaa"
             target="_blank"
             class="btn btn-outline-light btn-floating m-1"
             rel="noreferrer"
